# badway

./: .gitignore  .test.sh.swp  CMakeLists.txt  LICENSE  README.md  badway.cbp  cleanup.sh  diff.sh  rm.sh  test.sh
include/: PI64  PI64.h  main.h  mylib.h  nums.h  sha256.h  typos.h
openssl/: core.h  core_numbers.h  crypto.h  cryptoerr.h  e_os2.h  macros.h  md32_common.h  opensslv.h  safestack.h  sha.h  stack.h  types.h
src/: a.c  a.cpp  main.cpp  makePI64_h.py  mylib.cpp  sha256.c
